fix: update styles to remove horizontal scroll

--- a/shelter/src/scss/base/_mixins.scss
+++ b/shelter/src/scss/base/_mixins.scss
@@ -40,7 +40,7 @@
 
 // Medium Desktop and Generic Laptops
 @mixin atDesktopM {
-  @media (min-width: 1400px) {
+  @media (min-width: 1280px) {
     @content;
   }
 }
