--- a/shelter/src/scss/modules/_all-friends.scss
+++ b/shelter/src/scss/modules/_all-friends.scss
@@ -53,17 +53,22 @@
   @include atTablet768 {
     // box model
     margin-bottom: 4rem;
-    padding: 0 9.4rem;
+    padding: 0 8.6rem;
   }
 
   @include atDesktopS {
     // box model
-    column-gap: 4rem;
+    column-gap: 3.5rem;
     row-gap: 3rem;
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     margin-bottom: 6rem;
     padding: 0;
+  }
+
+  @include atDesktopM {
+    // box model
+    column-gap: 4rem;
   }
 }
 
