--- a/shelter/src/scss/modules/_circle-button.scss
+++ b/shelter/src/scss/modules/_circle-button.scss
@@ -7,8 +7,6 @@
   width: 5.2rem;
   margin: 0;
   padding: 0;
-  padding-bottom: 0.1rem;
-  padding-left: 0.1rem;
 
   // border
   border-radius: 50%;
